--- a/purpose.html
+++ b/purpose.html
@@ -9,6 +9,12 @@
 <body>
     <header>
         <h1>Purpose</h1>
+        <nav>
+        <a href="index.html">Home</a>
+        <a href="reason.html">Reason</a>
+        <a href="purpose.html">Purpose</a>
+        <a href="#contact">Contact</a>
+        </nav>
     </header>
     <section>
         <div class="container">
