--- a/reason.html
+++ b/reason.html
@@ -10,6 +10,12 @@
     <header>
         <h1>Reason</h1>
     </header>
+    <nav>
+    <a href="index.html">Home</a>
+    <a href="reason.html">Reason</a>
+    <a href="purpose.html">Purpose</a>
+    <a href="#contact">Contact</a>
+    </nav>
     <section>
         <div class="container">
             <h2>Why This Advocacy?</h2>
